force-app/main/default/objects/Junction_Object__c/Junction_Object__c.object-meta.xml
<CustomObject>
    <label>Junction Object</label>
    <nameField>
        <displayFormat>J O - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JO</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>