force-app/main/default/objects/Junction_Object__c/fields/fee_from_student__c.field-meta.xml
<CustomField>
    <fullName>fee_from_student__c</fullName>
    <formula>Student__r.Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fee from student</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>