force-app/main/default/objects/Junction_Object__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Students__c</referenceTo>
    <relationshipLabel>JO</relationshipLabel>
    <relationshipName>JO</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>